[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-types = { git = "https://github.com/casper-network/casper-node.git", default-features = false, branch = "release-2.0.0-rc3" }
casper-event-standard = { path = "../casper-event-standard" }
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", optional = true }
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", optional = true }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", optional = true }
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "release-2.0.0-rc3", optional = true }

[features]
default = []
contract-support = [ "dep:casper-contract" ]
test-support = [ "dep:casper-engine-test-support", "dep:casper-execution-engine", "dep:casper-storage" ]

[[bin]]
name = "event_producer"
path = "bin/event_producer.rs"
required-features = ["contract-support"]

[[bin]]
name = "event_initializer"
path = "bin/event_initializer.rs"
required-features = ["contract-support"]

[[test]]
name = "vm_tests"
path = "tests/vm_tests.rs"
required-features = ["test-support"]